<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.indra.pizzastore.OrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_order"
        android:id="@+id/textViewHeading"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:textColor="@color/Black"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/toppings"
        android:id="@+id/textViewtopping"
        android:layout_below="@+id/textViewbp"
        android:padding="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Total"
        android:id="@+id/textViewtotal"
        android:layout_marginTop="90dp"
        android:padding="15dp"
        android:layout_below="@+id/textViewtopping"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/base_price"
        android:id="@+id/textViewbp"
        android:layout_below="@+id/textViewHeading"
        android:padding="15dp"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/toppings_cost"
        android:id="@+id/textViewtopping_cost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewbp_cost"
        android:padding="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/base_price_cost"
        android:id="@+id/textViewbp_cost"
        android:layout_below="@+id/textViewHeading"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="15dp"
        android:layout_alignBottom="@id/textViewbp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Total_cost"
        android:id="@+id/textViewtotal_cost"
        android:padding="20dp"
        android:layout_alignTop="@+id/textViewtotal"
        android:layout_alignRight="@+id/textViewHeading"
        android:layout_alignEnd="@+id/textViewHeading" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/toppings_list"
        android:id="@+id/textViewtoppings_items"
        android:layout_below="@+id/textViewtopping"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/delivery"
        android:id="@+id/textViewdelivery"
        android:padding="15dp"
        android:layout_below="@+id/textViewtoppings_items"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/delivery_cost"
        android:id="@+id/textViewdelivery_cost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="15dp"
        android:layout_alignBottom="@id/textViewdelivery" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />
</RelativeLayout>
