<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.indra.pizzastore.MainActivity">

    <include layout="@layout/activity_row1toppings"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:id="@id/row1_id"
        android:layout_marginTop="5dp"
        />
    <include layout="@layout/activity_row2toppings"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:id="@id/row2_id"
        android:layout_marginTop="5dp"
        android:layout_below="@id/row1_id"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewPizza"
        android:src="@drawable/pizza"
        android:contentDescription="@string/pizza"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:id="@+id/buttonCheckout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:longClickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtoppings"
        android:id="@+id/buttonAddtoppings"
        android:layout_above="@+id/buttonCheckout"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearpizza"
        android:id="@+id/buttonclear"
        android:layout_above="@+id/buttonCheckout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/buttonAddtoppings"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_previous_order"
        android:id="@+id/checkBox"
        android:padding="10dp"
        android:layout_above="@+id/checkBoxDelivery"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery"
        android:id="@+id/checkBoxDelivery"
        android:padding="10dp"
        android:layout_above="@+id/progressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_above="@+id/buttonAddtoppings"
        android:layout_alignRight="@+id/buttonclear"
        android:layout_alignEnd="@+id/buttonclear" />

</RelativeLayout>
